# AI-Powered-Resume-Analyzer

./: .env-example  .flake8  README.md  pyproject.toml
.github/workflows/: main.yml
src/: ai.py  main.py  parser.py
src/static/: styles.css
src/templates/: index.html
